math-core/src/snapshots/math_core__tests__mathrm_nested4.snap
---
source: math-core/src/lib.rs
expression: "\\mathit{\\mathrm{a}}"
---
<math>
    <mi mathvariant="normal">a</mi>
</math>
