math-core/src/snapshots/math_core__tests__mathrm_no_brackets.snap
---
source: math-core/src/lib.rs
expression: "\\mathrm x"
---
<math>
    <mi mathvariant="normal">x</mi>
</math>
