math-core/src/snapshots/math_core__tests__mathrm_unknown_cmd.snap
---
source: math-core/src/lib.rs
expression: "\\mathrm{ab\\asdf}"
---
Position: 10
UnknownCommand(
    "asdf",
)
