math-core/src/snapshots/math_core__tests__mathrm_with_sin.snap
---
source: math-core/src/lib.rs
expression: "\\mathrm{x\\sin}"
---
<math>
    <mrow>
        <mi mathvariant="normal">x</mi>
        <mo lspace="0.1667em" rspace="0">sin</mo>
    </mrow>
</math>
