math-core/src/snapshots/math_core__tests__mathrm_with_sin2.snap
---
source: math-core/src/lib.rs
expression: "\\mathrm{\\sin x}"
---
<math>
    <mrow>
        <mo lspace="0" rspace="0.1667em">sin</mo>
        <mi mathvariant="normal">x</mi>
    </mrow>
</math>
