math-core/src/snapshots/math_core__tests__mathrm_with_superscript.snap
---
source: math-core/src/lib.rs
expression: "\\mathrm{x}^2"
---
<math>
    <msup>
        <mi mathvariant="normal">x</mi>
        <mn>2</mn>
    </msup>
</math>
