math-core/src/snapshots/math_core__tests__mathstrut.snap
---
source: math-core/src/lib.rs
expression: "\\mathstrut"
---
<math>
    <mpadded width="0" style="visibility:hidden"><mo stretchy="false">(</mo></mpadded>
</math>
