math-core/src/snapshots/math_core__tests__matrix.snap
---
source: math-core/src/lib.rs
expression: "\\begin{pmatrix} x \\\\ y \\end{pmatrix}"
---
<math>
    <mrow>
        <mo>(</mo>
        <mtable>
            <mtr>
                <mtd>
                    <mi>x</mi>
                </mtd>
            </mtr>
            <mtr>
                <mtd>
                    <mi>y</mi>
                </mtd>
            </mtr>
        </mtable>
        <mo>)</mo>
    </mrow>
</math>
