math-core/src/snapshots/math_core__tests__max_with_limits.snap
---
source: math-core/src/lib.rs
expression: "\\max\\limits_x"
---
<math>
    <munder>
        <mo movablelimits="false" lspace="0.1667em" rspace="0.1667em">max</mo>
        <mi>x</mi>
    </munder>
</math>
