math-core/src/snapshots/math_core__tests__max_with_relation.snap
---
source: math-core/src/lib.rs
expression: "\\max_{x\\in X}"
---
<math>
    <munder>
        <mo movablelimits="true" lspace="0.1667em" rspace="0.1667em">max</mo>
        <mrow>
            <mi>x</mi>
            <mo lspace="0" rspace="0">∈</mo>
            <mi>X</mi>
        </mrow>
    </munder>
</math>
