math-core/src/snapshots/math_core__tests__mid.snap
---
source: math-core/src/lib.rs
expression: "P(x\\mid y)"
---
<math>
    <mi>P</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo>∣</mo>
    <mi>y</mi>
    <mo stretchy="false">)</mo>
</math>
