math-core/src/snapshots/math_core__tests__middle_bracket.snap
---
source: math-core/src/lib.rs
expression: "\\left(\\frac12\\middle]\\frac12\\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mfrac>
                <mn>1</mn>
                <mn>2</mn>
            </mfrac>
            <mo>]</mo>
            <mfrac>
                <mn>1</mn>
                <mn>2</mn>
            </mfrac>
        </mrow>
        <mo>)</mo>
    </mrow>
</math>
